--- a/frontend/css/listado_anuncio_usuario/header.css
+++ b/frontend/css/listado_anuncio_usuario/header.css
@@ -1,3 +1,8 @@
+html,body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .header {
 background-color: #2C5559;
@@ -18,6 +23,10 @@ margin-bottom: 0px;
 margin-left: 20px;
 }
 
+a{
+  text-decoration: none;
+  color: white;
+}
 
 .menu {
 position: relative;
@@ -52,6 +61,7 @@ align-items: center;
 }
 
 
+
 .menu ul {
   list-style: none;
   margin: 0;
@@ -60,7 +70,7 @@ align-items: center;
   position: fixed;
   top: 0;
   right: 0;
-  width: 70%;               
+  width: 70%;            
   height: 100vh;
   transform: translateX(100%);  
   transition: transform 0.3s ease-in-out;
@@ -87,6 +97,42 @@ align-items: center;
 #menu-switch:checked ~ ul {
   transform: translateX(0);
 }
+
+
+
+.submenu {
+  display: none;
+  margin-top: 6px;
+  padding-left: 0;
+}
+
+#submenu-switch:checked ~ .submenu {
+  display: block;
+}
+
+.submenu-label {
+  color: white;
+  font-family: 'Bebas', sans-serif;
+  font-size: 18px;
+  cursor: pointer;
+  display: block;
+  padding: 10px;
+  border: 1px solid #fff;
+  text-align: center;
+  background-color: transparent;
+}
+
+.submenu a {
+  color: white;
+  text-decoration: none;
+  padding: 8px 10px;
+  display: block;
+  text-align: center;
+  border: 1px solid #fff;
+  margin-top: 4px;
+}
+
+
 
 
 @media (min-width: 768px){
@@ -129,5 +175,49 @@ align-items: center;
    border-width: 0px;
    text-align: left;
    color: white;
+   position: relative;
+   margin-left: 20px;
+  }
+
+
+  .submenu-label {
+    border: none;
+    padding: 10px 0;
+  }
+
+  .submenu {
+    position: absolute;
+    top: 60%;
+    left: 0;
+    background-color: #2C5559;
+    padding: 0;
+    min-width: 150px;
+    display: none;
+    z-index: 100;
+  }
+  
+  #submenu-switch {
+    display: none;
+  }
+
+  .submenu a {
+    border: none;
+    padding: 10px;
+    text-align: left;
+    font-size: 16px;
+    font-family: 'Bebas', sans-serif;
+    background-color: #2C5559;
+  }
+
+
+}
+
+@media(min-width:1024px){
+
+  .submenu-toggle:hover .submenu {
+    display: block;
+  }
+    .submenu a:hover {
+    background-color: #2f8999;
   }
 }
