--- a/frontend/css/style_visitante/registro.css
+++ b/frontend/css/style_visitante/registro.css
@@ -116,7 +116,7 @@ align-items: center;
 form {
  display: flex;
  flex-direction: column;
- gap: 16px;
+ gap: 13px;
 }
 
 form label {
@@ -154,6 +154,7 @@ form p a {
  margin-left: 4px;
 }
 
+
 .footer {
   background-color: #f2f2f2;
   padding: 32px 16px;
@@ -184,7 +185,13 @@ form p a {
   font-size: 13px;
   color: #666;
  }
-
+ .msg-error {
+  color: red;
+  font-size: 12px;
+  margin-top: -12px;
+  margin-bottom: 10px;
+  padding-left: 4px;
+}
 
 @media (min-width: 768px){
  .header{
