--- a/frontend/css/style_visitante/detalle_anuncio/visualizacion-anuncio.css
+++ b/frontend/css/style_visitante/detalle_anuncio/visualizacion-anuncio.css
@@ -84,6 +84,39 @@ html, body {
   font-size: 14px;
   margin-bottom: 4px;
 }
+
+.galeria-imagenes {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 10px 0;
+}
+
+.galeria-imagenes img {
+  width: 120px;
+  height: auto;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: transform 0.2s;
+  }
+
+.galeria-imagenes img:hover {
+  transform: scale(1.05);
+  }
+
+.imagen-principal {
+   width: 100%;
+   max-width: 500px;
+   border-radius: 8px;
+   margin-bottom: 10px;
+}
+
+.info-anuncio {
+  margin-bottom: 25px;
+}
+
+
+
 @media (min-width: 768px) {
   .main-container {
     max-width: 720px;
